# s3proxy

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  README.md  go.mod  go.sum  go.work
.devcontainer/: devcontainer.env  devcontainer.json  postCreateCommand.sh  theme.omp.json  upgradeShell.sh
.github/workflows/: docker-build-push.yml  helm-push.yml
charts/s3proxy/: Chart.yaml  values.yaml
charts/s3proxy/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml  valssecret.yaml
s3proxy/cmd/: BUILD.bazel  main.go
s3proxy/internal/app/: app.go  app_e2e_test.go
s3proxy/internal/cache/: BUILD.bazel  cache.go  store.go
s3proxy/internal/caching/: BUILD.bazel  cache.go  cache_test.go  stats.go  store.go  store_test.go
s3proxy/internal/config/: config.go  validation.go
s3proxy/internal/crypto/: BUILD.bazel  crypto.go  crypto_test.go
s3proxy/internal/encryption/: client.go  kms.go  kms_test.go
s3proxy/internal/router/: BUILD.bazel  cache_middleware.go  classification.go  errors.go  handler.go  handler_panic_test.go  handler_streaming_test.go  http_helpers.go  middleware.go  object.go  object_service.go  router.go  router_classification_test.go  router_integration_test.go
s3proxy/internal/s3/: BUILD.bazel  client.go  s3.go  s3_test.go
s3proxy/internal/telemetry/: metrics.go  metrics_test.go
